# LiuTang

./: .gitignore  README.md  README_CN.md  pyproject.toml  upload_pypi.bat  upload_pypi.sh
examples/: 01_word_count.py  02_csv_processing.py  03_kafka_streaming.py  04_windowed_aggregation.py  05_cross_engine.py  06_fraud_detection.py
paper/: Article.md  Article_CN.md  aaai.sty  main.md  main.tex  references.bib  引用位置.md
pdf/: REFERENCES.md  文献综述.md
src/liutang/: __init__.py
src/liutang/core/: __init__.py  adaptive_flow.py  connector.py  errors.py  eventlog.py  flow.py  granularity.py  lambda_flow.py  schema.py  serializer.py  serving.py  state.py  stream.py  viscosity.py  window.py
src/liutang/engine/: __init__.py  executor.py  registry.py  runner.py  watermark.py
src/liutang/engine/flink/: __init__.py  adapter.py  executor.py
src/liutang/engine/local/: __init__.py  executor.py  runner.py
src/liutang/engine/spark/: __init__.py  adapter.py  executor.py
src/liutang/serialization/: __init__.py
tests/: test_benchmark.py  test_core.py  test_distributed.py  test_features.py
